# atlas.lidar.io

./: .angular-cli.json  .env.development  .env.production  .gitignore  Cargo.toml  README.md  atlas.lidar.io.toml  fabfile.py  package-lock.json  package.json
data/: server.toml
public/: index.html
src/: App.vue  Camera.vue  CameraCard.vue  CameraList.vue  CameraMixin.vue  CamerasMixin.vue  Dashboard.vue  Navbar.vue  Site.vue  SiteCard.vue  SiteList.vue  SiteMixin.vue  SitesMixin.vue  api.js  api.rs  config.rs  error.rs  handler.rs  helper.rs  index.html  lib.rs  main.js  main.rs  server.rs  styles.css  watch.rs  world.rs
src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  atlas-battery.ts  atlas-efoy.ts  atlas-power-history.ts  atlas-power.component.css  atlas-power.component.html  atlas-power.component.ts  atlas-status.ts  atlas.service.ts  camera-detail.component.html  camera-detail.component.ts  camera-latest-image.component.html  camera-latest-image.component.ts  camera.service.ts  camera.ts  dashboard.component.css  dashboard.component.html  dashboard.component.ts  hel-bergcam.component.css  hel-bergcam.component.html  mock-cameras.ts  state-of-charge-bg.pipe.ts
src/app/atlas/: atlas-batteries.component.html  atlas-status.ts  (+20 more)
src/components/: App.vue  Camera.vue  CameraCard.vue  CameraDual.vue  CameraList.vue  CameraSingle.vue  Dashboard.vue  ImagePicker.vue  Navbar.vue
src/environments/: environment.prod.ts  environment.ts
src/store/: index.js
static/: atlas.lidar.io.css  index.js
templates/: index.hbs  last-scan-abort.hbs  last-scan-ok.hbs  progress-bar.hbs
(+16 files in other folders)
