[package]
name = "atlas-lidar-io"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]

[features]
watch = ["handlebars-iron/watch"]

[dependencies]
camera = { git = "https://github.com/glacio/camera.git" }
chrono = "*"
docopt = "*"
handlebars = "*"
handlebars-iron = "*"
heartbeat = { git = "https://github.com/glacio/heartbeat.git" }
iron = "*"
mount = "*"
notify = "*"
router = "*"
rustc-serialize = "*"
staticfile = "*"
toml = "*"

[[bin]]
name = "atlas-lidar-io"
doc = false
