[package]
name = "atlas-lidar-io"
version = "0.1.0"
authors = ["Pete Gadomski <peter.j.gadomski@usace.army.mil>"]

[features]
watch = ["handlebars-iron/watch"]

[dependencies]
camera = { git = "https://github.com/glacio/camera.git" }
chrono = "0.2"
docopt = "0.6"
handlebars = "0.20"
handlebars-iron = "0.18"
heartbeat = { git = "https://github.com/glacio/heartbeat.git" }
iron = "0.4"
mount = "0.2"
notify = "2.6"
router = "0.2"
rustc-serialize = "0.3"
staticfile = "0.3"
toml = "0.2"

[[bin]]
name = "atlas-lidar-io"
doc = false
